--- a/Questions/Question1/Question1.Rmd
+++ b/Questions/Question1/Question1.Rmd
@@ -125,391 +125,63 @@ AI_Funds <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question
 
 # Introduction \label{Introduction}
 
+Load data, transform to xts format, and combine in one dataset for easier work
 
-
-```{r Figure1,  warning =  FALSE, fig.align = 'center', fig.cap = "Caption Here \\label{Figure1}", fig.ext = 'png', fig.height = 3, fig.width = 6}
-
-library(tidyverse);library(fmxdat)
-
-perf_chart_1 <- 
-  AI_Funds %>% 
-  ggplot() + 
-  geom_line(aes(date, AI_Fund, color = "Blue"), size = 1, alpha = 0.7) + 
-  # Nice clean theme, with many additions that are now simplified (explore this yourself):
-  # E.g. using fmxdat::ggpts, we can change the sizes more easily in millimeters. 
-  # theme_fmx also offers simplified size settings, as e.g. below:
-  fmxdat::theme_fmx(title.size = ggpts(30), 
-                    subtitle.size = ggpts(28),
-                    caption.size = ggpts(25),
-                    # Makes nicer caption. If no caption given, this will break function, so careful:
-                    CustomCaption = T) + 
-  # crisp colours:
-  fmxdat::fmx_cols() + 
-  labs(x = "", y = "Cumulative Returns", caption = "Note:\nCalculation own",
-       title = "Illustrating fmxdat Auxilliary functions for ggplot",
-       subtitle = "If not subtitle, make blank and Subtitle size small to make a gap\nbetween plot and Title. Test this yourself") + 
-  guides(color = F)
-  
-# Finplot now adds finishing touches easily:
-
-  fmxdat::finplot(perf_chart_1, x.vert = T, x.date.type = "%Y", x.date.dist = "2 years")
-```
 
 ```{r}
-
+pacman::p_load("xts", "tbl2xts", "PerformanceAnalytics", "RcppRoll")
 threshold_date <- as.Date("2003-10-31")
 AI_xts <- AI_Funds %>% tbl_xts()
 ASISA_xts <- ASISA %>% select(-Index, -FoF) %>% spread(Fund, Returns) 
 
-ASISA_median <- ASISA %>% group_by(date) %>% summarise(mean_returns = mean(Returns, na.rm = TRUE), .groups = "drop") %>% tbl_xts()
+ASISA_median <- median_A(ASISA)
 
 BM_xts <- BM %>% select(-Tickers) %>% tbl_xts()
 
-merged <- merge.xts(AI_xts, ASISA_median, BM_xts) %>% na.omit()
-
-chart.CumReturns(AI_xts)
-chart.CumReturns(ASISA_median)
-
-chart.CumReturns(merged, legend.loc = 1)
+merged <- merge.xts(AI_xts, ASISA_median, BM_xts) %>% na.omit() 
+colnames(merged) <- c("AI_Fund", "Managed_Funds", "Benchmark")
 
 ```
+
+Combined data frame allows to plot the cumulative returns of Managed funds, the AI fund 
+and the benchmark fund to compare the cumulative performance
+
+```{r}
+chart.CumReturns(merged, legend.loc = 1)
+```
+
+Since the performance for the whole time does not say a lot about the performance
+for reasons such as the strong benefits or punishments for actions i the beginning,
+the rolling performance will be plotted.
 
 ```{r}
 chart.RollingPerformance(merged, 36, legend.loc = 3)
-chart.Histogram(merged)
-library(hrbrthemes)
-df_merged <- data.frame(date = index(merged), coredata(merged)) %>% gather(Funds, Returns, -date)
-means <- df_merged %>%
-  group_by(Funds) %>%
-  summarise(mean_return = mean(Returns, na.rm = TRUE))
 
-ggplot(data = df_merged, aes(x = Returns, group = Funds, fill = Funds)) +
-  geom_density(adjust = 1.5, alpha = 0.4) +
-  geom_vline(data = means, aes(xintercept = mean_return, color = Funds),
-             linetype = "dashed", size = 0.7) +
-  theme_ipsum() +
-  labs(title = "Density Plot with Means",
-       x = "Returns",
-       y = "Density") +
-  theme(legend.position = "right")
 ```
 ```{r}
-year_roll <- roll_mean(merged, 36)
-df_roll <- data.frame(date = index(year_roll), coredata(year_roll)) %>% gather(Funds, Returns, -date)
-means <- df_roll %>%
-  group_by(Funds) %>%
-  summarise(mean_return = mean(Returns, na.rm = TRUE))
-
-ggplot(data = df_roll, aes(x = Returns, group = Funds, fill = Funds)) +
-  geom_density(adjust = 1.5, alpha = 0.4) +
-  geom_vline(data = means, aes(xintercept = mean_return, color = Funds),
-             linetype = "dashed", size = 0.7) +
-  theme_ipsum() +
-  labs(title = "Density Plot with Means",
-       x = "Returns",
-       y = "Density") +
-  theme(legend.position = "right")
+density_plot(merged, 36)
 ```
-
-
-Cumulative returns AI_Fund
+Lets look at the risk and the volatility of the different funds, start of with the
+rolling standard deviation
 
 ```{r}
-AI_Funds <- cum_returns(AI_Funds, date, AI_Fund)
-AI_roll <- roll_returns(AI_Funds, date, Returns, 36)
-
-
+density_plot_var(merged, 36)
 ```
 
-Clean ASISA
+Rolling plot already shows lowest variance for Managed funds, and highest variance for AI fund
+Lets look at the downside deviation which measures the risk of an investment by calculating the standard deviation of negative returns below a defined threshold.
 
 ```{r}
-ASISA_c <- ASISA %>%
-  group_by(date) %>% # Group by month
-  summarise(Average_Returns = mean(Returns, na.rm = TRUE)) %>% ungroup()# Calculate average returns
-
-ASISA_roll <- roll_returns(ASISA_c, date, Average_Returns, 36)
-
-BM_roll <- roll_returns(BM, date, Returns, 36)
-
-
+DownsideDeviation(merged, 0)
 ```
+
+We can see that the AI funds downside deviation is more thandouble as high as the Managed funds,
+and slightly higher than benchmark. Lets visualize.
 
 ```{r}
-
-merged_data <- BM_roll %>%
-  full_join(ASISA_roll, by = "date", suffix = c("_SWIX", "_ASISA")) #%>%
-  #full_join(AI_roll, by = "date", suffix = c("", "_AI"))  # Use "" for already renamed columns
-
+chart.Drawdown(merged, legend.loc = 3)
 ```
 
-
-```{r}
-long <- merged_data %>% select(date, Rolling_Returns_SWIX, Rolling_Returns_ASISA) %>% 
-    gather(Index, Return, -date)
-
-```
-
-```{r}
-g <-
-long %>%
-    ggplot() + geom_line(aes(date, Return, color = Index),
-    alpha = 0.7, size = 1.25) + labs(title = "Illustration of Rolling 3 Year Annualized Returns of various Indices with differing start dates",
-    subtitle = "", x = "", y = "Rolling 3 year Returns (Ann.)",
-    caption = "Note:\nDistortions are not evident now.") + theme_fmx(title.size = ggpts(30),
-    subtitle.size = ggpts(5), caption.size = ggpts(25), CustomCaption = T) +
-    fmx_cols()
-
-finplot(g, x.date.dist = "1 year", x.date.type = "%Y", x.vert = T,
-    y.pct = T, y.pct_acc = 1)
-```
-
-To make your graphs look extra nice in latex world, you could use Tikz device. Replace dev - 'png' with 'tikz' in the chunk below. Notice this makes the build time longer and produces extra tex files - so if you are comfortable with this, set your device to Tikz and try it out:
-
-```{r Figure2, warning =  FALSE, fig.align = 'center', fig.cap = "Caption Here \\label{Figure2}", fig.height = 3, fig.width = 6, dev = 'png'}
-
-ExampleData <- read_rds( "data/Example_data.rds")
-
-source("code/Example_Plot_Scatter.R") # Load a function from your 'code' folder. This e.g. plots scatters to your own preferences.
-source( "code/Data_Create.R") #
-
-ExampleData <- Data_Create(N = 100) # Same as the ExampleData loaded above - this is just a function to create the stored data.
-
-g <- Example_Plot_Scatter(DataInput = ExampleData,
-                          X = "Height_Score",
-                          Y = "Weight_Score",
-                          Z = "Agility_Score",
-                          Theme = theme_bw(), # run ?ggthemes for other themes.
-                          Title = "", # I prefer to use the caption set above.
-                          Ylab = "Height",
-                          Xlab = "Lenght",
-                          LegendTitle = "Agility",
-                          TitleSize = 10,
-                          LabSize = 10)
-
-g
-
-# Although the functions above are really simple, the principle is simple: containing calculations and data wrangling in their own functions will make this template much cleaner and more manageable.
-# When you start working, delete these meaningless functions and replace with your own...
-
-```
-
-To reference the plot above, add a ``\\label'' after the caption in the chunk heading, as done above. Then reference the plot as such: As can be seen, Figures \ref{Figure1}  and \ref{Figure2} are excellent, with Figure \ref{Figure2} being particularly aesthetically pleasing due to its device setting of Tikz. The nice thing now is that it correctly numbers all your figures (and sections or tables) and will update if it moves. The links are also dynamic.
-
-I very strongly suggest using ggplot2 (ideally in combination with dplyr) using the ggtheme package to change the themes of your figures.
-
-Also note the information that I have placed above the chunks in the code chunks for the figures. You can edit any of these easily - visit the Rmarkdown webpage for more information.
-
-# Splitting a page
-
-You can also very easily split a page using built-in Pandoc formatting. I comment this out in the code (as this has caused issues building the pdf for some users - which I presume to be a Pandoc issue), but you are welcome to try it out yourself by commenting out the following section in your Rmd file.
-
-
-<!-- :::::: {.columns data-latex="[T]"} -->
-<!-- ::: {.column data-latex="{0.7\textwidth}"} -->
-<!-- ```{r, echo=FALSE, fig.width=4, fig.height=4} -->
-<!-- par(mar = c(4, 4, .2, .1)) -->
-<!-- plot(cars, pch = 19) -->
-<!-- ``` -->
-<!-- ::: -->
-<!-- ::: {.column data-latex="{0.05\textwidth}"} -->
-<!-- \ -->
-<!-- ::: -->
-<!-- ::: {.column data-latex="{0.2\textwidth}"} -->
-<!-- \scriptsize -->
-
-<!-- ## Data {-} -->
-<!-- The figure on the left-hand side shows the `cars` data. -->
-
-<!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do -->
-<!-- eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut -->
-<!-- enim ad minim veniam, quis nostrud exercitation ullamco laboris -->
-<!-- nisi ut aliquip ex ea commodo consequat. -->
-<!-- ::: -->
-<!-- :::::: -->
-
-
-
-#  Methodology \label{Meth}
-
-## Subsection
-Ideally do not overuse subsections. It equates to bad writing.^[This is an example of a footnote by the way. Something that should also not be overused.]
-
-## Math section
-
-Equations should be written as such:
-
-\begin{align}
-\beta = \sum_{i = 1}^{\infty}\frac{\alpha^2}{\sigma_{t-1}^2} \label{eq1} \\
-\int_{x = 1}^{\infty}x_{i} = 1 \notag
-\end{align}
-
-If you would like to see the equations as you type in Rmarkdown, use $ symbols instead (see this for yourself by adjusted the equation):
-
-$$
-\beta = \sum_{i = 1}^{\infty}\frac{\alpha^2}{\sigma_{t-1}^2} \\
-\int_{x = 1}^{\infty}x_{i} = 1
-$$
-
-Note the equation above - this should appear in math in Rstudio. Writing nice math requires practice. Note I used a forward slashes to make a space in the equations. I can also align equations using  __\&__, and set to numbering only the first line. Now I will have to type ``begin equation'' which is a native \LaTeX command. Here follows a more complicated equation that you want aligned (using \& sign) and numbered:
-
-
-\begin{align}
-	y_t &= c + B(L) y_{t-1} + e_t   \label{eq2}    \\ \notag
-	e_t &= H_t^{1/2}  z_t ; \quad z_t \sim  N(0,I_N) \quad \& \quad H_t = D_tR_tD_t \\ \notag
-		D_t^2 &= {\sigma_{1,t}, \dots, \sigma_{N,t}}   \\ \notag
-		\sigma_{i,t}^2 &= \gamma_i+\kappa_{i,t}  v_{i, t-1}^2 +\eta_i  \sigma_{i, t-1}^2, \quad \forall i \\ \notag
-		R_{t, i, j} &= {diag(Q_{t, i, j}}^{-1}) . Q_{t, i, j} . diag(Q_{t, i, j}^{-1})  \\ \notag
-		Q_{t, i, j} &= (1-\alpha-\beta)  \bar{Q} + \alpha  z_t  z_t'  + \beta  Q_{t, i, j} \notag
-\end{align}
-
-Note that in \ref{eq2} I have aligned the equations by the equal signs. I also want only one tag, and I create spaces using ``quads''.
-
-See if you can figure out how to do complex math using the two examples provided in \ref{eq1} and \ref{eq2}.
-
-<!-- $$ -->
-<!-- This is a commented out section in the writing part. -->
-<!-- Comments are created by highlighting text, amnd pressing CTL+C -->
-<!-- \\begin{align} -->
-<!-- \\beta = \\alpha^2 -->
-<!-- \end{align} -->
-<!-- $$ -->
-
-
-# Including an external plot
-
-You can also include plots produced outside of your Rmarkdown file using the package *knitr*
-
-See below chunk:
-
-```{r, out.width = "205px", fig.cap=figures("Some Figure"), eval = F}
-
-knitr::include_graphics("YourFigureLocation/Logo.png")
-
-```
-
-
-# Results
-
-Tables can be included as follows. Use the _xtable_ (or kable) package for tables. Table placement = H implies Latex tries to place the table Here, and not on a new page (there are, however, very many ways to skin this cat. Luckily there are many forums online!).
-
-
-```{r ShortTable, results = 'asis'}
-
-library(xtable)
-data <- mtcars[1:5,] %>% tibble::as_tibble()
-
-table <- xtable(data, caption = "Short Table Example \\label{tab1}")
-  print.xtable(table,
-             # tabular.environment = "longtable",
-             floating = TRUE,
-             table.placement = 'H',
-             # scalebox = 0.3,
-             comment = FALSE,
-             caption.placement = 'bottom'
-             )
-
-```
-
-To reference calculations __in text__, _do this:_ From table \ref{tab1} we see the average value of mpg is `r mean(mtcars[1:5,]$mpg)`.
-
-Including tables that span across pages, use the following (note that I add below the table: ``continue on the next page''). This is a neat way of splitting your table across a page.
-
-Use the following default settings to build your own possibly long tables. Note that the following will fit on one page if it can, but cleanly spreads over multiple pages:
-
-```{r LongTable, results = 'asis'}
-
-library(xtable)
-
-data = mtcars %>% tibble::as_tibble()
-  addtorow          <- list()
-  addtorow$pos      <- list()
-  addtorow$pos[[1]] <- c(0)
-  addtorow$command  <- c(paste("\\hline \n",
-                               "\\endhead \n",
-                               "\\hline \n",
-                               "{\\footnotesize Continued on next page} \n",
-                               "\\endfoot \n",
-                               "\\endlastfoot \n",sep=""))
-table <- xtable(data, caption = "Long Table Example")
-  print.xtable(table,
-             tabular.environment = "longtable",
-             floating = FALSE, # Leave this as is.
-             table.placement = 'H', # Leave this as is.
-             booktabs = T, # Aesthetics
-             include.rownames = FALSE,  # Typically you don't want this in a table.
-             add.to.row = addtorow, # For adding the Continued on next page part...
-             comment = FALSE,
-             caption.placement = 'top',  # Where do you want the caption?
-             size="\\fontsize{12pt}{13pt}\\selectfont"  # Size of text in table..
-             )
-# See https://cran.r-project.org/web/packages/xtable/vignettes/xtableGallery.pdf for table inspiration
-```
-
-\hfill
-
-<!-- hfill can be used to create a space, like here between text and table. -->
-
-
-## Huxtable
-
-Huxtable is a very nice package for making working with tables between Rmarkdown and Tex easier.
-
-This cost some adjustment to the Tex templates to make it work, but it now works nicely.
-
-See documentation for this package [here](https://hughjonesd.github.io/huxtable/huxtable.html). A particularly nice addition of this package is for making the printing of regression results a joy (see [here](https://hughjonesd.github.io/huxtable/huxtable.html#creating-a-regression-table)). Here follows an example:
-
-
-If you are eager to use huxtable, comment out the Huxtable table in the Rmd template, and uncomment the colortbl package in your Rmd's root.
-
-Note that I do not include this in the ordinary template, as some latex users have complained it breaks when they build their Rmds (especially those using tidytex - I don't have this problem as I have the full Miktex installed on mine). Up to you, but I strongly recommend installing the package manually and using huxtable. To make this work, uncomment the _Adding additional latex packages_ part in yaml at the top of the Rmd file. Then comment out the huxtable example in the template below this line. Reknit, and enjoy.
-
-```{r, results = 'asis'}
-
-if(!require(huxtable)) install.packages(huxtable)
-library(huxtable)
-data(diamonds, package = 'ggplot2')
-Title <- "Regression Output"
-Label <- "Reg01"
-lm1 <- lm(price ~ carat, diamonds)
-lm2 <- lm(price ~ depth, diamonds)
-lm3 <- lm(price ~ carat + depth, diamonds)
-htab <-
-huxreg(lm1, lm2, lm3,
-                statistics = c(N = "nobs", R2 = "r.squared"),
-                note = "%stars%.") %>%
-  set_caption(Title) %>%
-  set_label(Label)
-# More settings:
-font_size(htab) <- 12
-# Let's change regression names: this is slightly hacky, but works. Comment out this section to see what the default looks like:
-  Names <- c( "Reg1", "Reg2", "Reg3")
-  for(i in 1:length(Names)) {
-    htab[1,][[1+i]] <- Names[i]
-  }
-# Now simply call the table:
-htab
-
-```
-
-FYI - R also recently introduced the gt package, which is worthwhile exploring too.
-
-# Lists
-
-To add lists, simply using the following notation
-
-* This is really simple
-
-    + Just note the spaces here - writing in R you have to sometimes be pedantic about spaces...
-
-* Note that Rmarkdown notation removes the pain of defining \LaTeX environments!
-
-# Conclusion
-
-I hope you find this template useful. Remember, stackoverflow is your friend - use it to find answers to questions. Feel free to write me a mail if you have any questions regarding the use of this package. To cite this package, simply type citation("Texevier") in Rstudio to get the citation for @Texevier (Note that uncited references in your bibtex file will not be included in References).
-
-<!-- Make title of bibliography here: -->
-<!-- \newpage -->
 
 \newpage
 
