--- a/Questions/Question2/Question2.Rmd
+++ b/Questions/Question2/Question2.Rmd
@@ -68,234 +68,52 @@ library(cowplot)
 ZAR_YM <- ZAR %>% mutate(date = format(as.Date(date), "%Y-%m"))
 USD_ZAR_returns <- ZAR_YM %>% mutate(Return_cur = value/lag(value) - 1)
 
-Return <- Indexes %>% 
-  mutate(date = format(as.Date(date), "%Y-%m")) %>% 
-    full_join(., ZAR_YM, by = "date") %>% na.omit() %>% 
-    mutate(J433_USD = J433/value) %>% mutate(ALBI_USD = ALBI/value) %>% 
-  mutate(Global_Return = 0.18 * MSCI_ACWI + 0.12 * Bbg_Agg,
-         Local_Return = 0.42 * J433_USD + 0.28 * ALBI_USD,
-         Portfolio_Return = Global_Return + Local_Return) %>% 
-    left_join(., USD_ZAR_returns, by = "date")
+Return <- calculate_returns(Indexes, ZAR_YM, USD_ZAR_returns)
+Return_hedged <- hedged_returns(Indexes)
 
 data_global <- Return %>% select(date, Global_Return, Return_cur) 
 
-data_global$quadrant <- with(data_global, ifelse(Return_cur < 0 & Global_Return > 0, "Top-Left",
-                            ifelse(Return_cur < 0 & Global_Return < 0, "Bottom-Left",
-                            ifelse(Return_cur > 0 & Global_Return > 0, "Top-Right",
-                            "Bottom-Right"))))
-percentages <- round(prop.table(table(data_global$quadrant)) * 100)
-
-x_min <- floor(min(data_global$Return_cur) * 100 / 5) * 5  # Round down to nearest 5%
-x_max <- ceiling(max(data_global$Return_cur) * 100 / 5) * 5  # Round up to nearest 5%
-y_min <- floor(min(data_global$Global_Return) * 100 / 5) * 5
-y_max <- ceiling(max(data_global$Global_Return) * 100 / 5) * 5
-
-p <- ggplot(data_global, aes(x = Return_cur * 100, y = Global_Return * 100)) +
-  geom_point(alpha = 0.6) +
-  geom_vline(xintercept = 0, linetype = "dashed") +
-  geom_hline(yintercept = 0, linetype = "dashed") +
-  xlim(x_min, x_max) +
-  ylim(y_min, y_max) +
-  xlab("USD-ZAR Returns (%)") +
-  ylab("60-40 Global Portfolio USD Returns (%)") +
-  theme_bw() +
-  theme(plot.margin = unit(c(1,1,2,1), "lines"))
-
-p <- p + 
-  annotate("rect", xmin = x_min, xmax = 0, ymin = y_min, ymax = y_max,
-           fill = "yellow", alpha = 0.1) +
-  annotate("rect", xmin = 0, xmax = x_max, ymin = y_min, ymax = y_max,
-           fill = "green", alpha = 0.1)
-
-p <- p +
-  annotate("text", x = x_min * 0.7, y = y_max * 0.9, label = "Hedge works but amplifies volatility\n(strong negative correlation)", hjust = 0, size = 3) +
-  annotate("text", x = x_min * 0.7, y = y_min * 0.7, label = "Best case for hedge:\nhigher return, lower volatility", hjust = 0, size = 3) +
-  annotate("text", x = x_max * 0.05, y = y_min * 0.7, label = "Hedge removes\ncurrency cushion", hjust = 0, size = 3) +
-  annotate("text", x = x_max * 0.05, y = y_max * 0.9, label = "Hedge throws away returns", hjust = 0, size = 3) +
-  annotate("text", x = 0, y = y_max * 1.05, label = "Hedge is not free", vjust = -0.5, hjust = 0.5, size = 4, fontface = "bold")
-
-quad_positions <- data.frame(
-  quadrant = c("Top-Left", "Bottom-Left", "Top-Right", "Bottom-Right"),
-  x = c(x_min * 0.5, x_min * 0.5, x_max * 0.5, x_max * 0.5),
-  y = c(y_max * 0.5, y_min * 0.5, y_max * 0.5, y_min * 0.5),
-  percentage = c(percentages["Top-Left"], percentages["Bottom-Left"], percentages["Top-Right"], percentages["Bottom-Right"])
-)
-
-p <- p +
-  geom_text(data = quad_positions, aes(x = x, y = y, label = paste0(percentage, "%")), color = "black", size = 5, fontface = "bold")
-
-# Add trend line (negative correlation)
-p <- p + geom_smooth(method = "lm", se = FALSE, color = "blue")
-
-# Add source attribution
-p <- p +
-  annotate("text", x = x_min, y = y_min - (y_max - y_min) * 0.1, label = "Source: Bloomberg. Calculation Satrix (31 December 2004 – 31 January 2023).", hjust = 0, size = 3)
-
-p_top <- ggplot(data_global, aes(x = Return_cur * 100)) +
-  geom_density(fill = "green", alpha = 0.5) +
-  theme_void() +
-  xlim(x_min, x_max)
-
-p_right <- ggplot(data_global, aes(x = Global_Return * 100)) +
-  geom_density(fill = "red", alpha = 0.5) +
-  theme_void() +
-  xlim(y_min, y_max) +
-  coord_flip()
-
-p_top <- p_top + theme(axis.title = element_blank(), axis.text = element_blank(), axis.ticks = element_blank())
-p_right <- p_right + theme(axis.title = element_blank(), axis.text = element_blank(), axis.ticks = element_blank())
-
-# Arrange the plots
-p_final <- plot_grid(p_top, NULL, p, ncol = 1, rel_heights = c(1, 0.1, 4))
-p_combined <- plot_grid(p_final, p_right, ncol = 2, rel_widths = c(4, 1))
-
-# Display the combined plot
-print(p_combined)
-```
-
-Compare rolling 3 year hedged and unhedged
-```{r}
-# Load necessary libraries
-library(dplyr)
-library(lubridate)
-library(readr)
-library(zoo)
-library(ggplot2)
-
-
-# Ensure the date columns are in Date format
-Indexes <- Indexes %>% mutate(date = as.Date(date))
-ZAR <- ZAR %>% mutate(date = as.Date(date))
-
-# Calculate local returns for ZAR-denominated indices (Capped SWIX and ALBI)
-Indexes_Local_Returns <- Indexes %>%
-  arrange(date) %>%
-  mutate(
-    J433_Return = J433 / lag(J433) - 1,
-    ALBI_Return = ALBI / lag(ALBI) - 1
-  )
-
-# Calculate returns for USD-denominated indices (MSCI ACWI and Global Bond Aggregate)
-Indexes_Local_Returns <- Indexes_Local_Returns %>%
-  mutate(
-    MSCI_ACWI_Return = MSCI_ACWI / lag(MSCI_ACWI) - 1,
-    Bbg_Agg_Return = Bbg_Agg / lag(Bbg_Agg) - 1
-  )
-
-# Remove the first row with NA returns due to lag
-Indexes_Local_Returns <- Indexes_Local_Returns %>% na.omit()
-
-# Calculate the portfolio returns for the hedged portfolio (currency effects are neutralized)
-Indexes_Local_Returns <- Indexes_Local_Returns %>%
-  mutate(
-    Global_Return = 0.18 * MSCI_ACWI_Return + 0.12 * Bbg_Agg_Return,
-    Local_Return = 0.42 * J433_Return + 0.28 * ALBI_Return,
-    Portfolio_Return_Hedged = Global_Return + Local_Return
-  )
-
-
-# Calculate rolling 12-month volatility for the hedged portfolio
-Indexes_Local_Returns <- Indexes_Local_Returns %>%
-  arrange(date) %>%
-  mutate(
-    Rolling_Vol_Hedged = rollapply(Portfolio_Return_Hedged, width = 12, FUN = sd, fill = NA, align = "right") * sqrt(12)
-  )
-
-# Plotting the rolling volatility over time
-ggplot(Indexes_Local_Returns, aes(x = date, y = Rolling_Vol_Hedged)) +
-  geom_line(color = "blue") +
-  labs(title = "12-Month Rolling Volatility of Hedged Portfolio",
-       x = "Date",
-       y = "Rolling Volatility") +
-  theme_minimal()
+create_plot(data_global)
 
 ```
+
 
 
 ```{r}
-# Load necessary libraries
-library(dplyr)
-library(lubridate)
-library(readr)
-library(zoo)
-library(ggplot2)
+library(RcppRoll)
+library(PerformanceAnalytics)
+library(tbl2xts)
+library(xts)
+unhedged <- Return %>%
+    select(date, Portfolio_Return) %>%
+    mutate(date = as.yearmon(date))
+hedged <- Return_hedged %>% select(date, Portfolio_Return_Hedged)%>%
+    mutate(date = as.yearmon(date))
+merged <- left_join(unhedged, hedged, by = "date") %>% tbl2xts::tbl_xts()
 
-# Load the data
+cur_ret <- USD_ZAR_returns %>%
+    mutate(date = as.yearmon(date)) %>%
+    tbl_xts() %>%
+    .["2002-02/"] 
 
-
-# Ensure the date columns are in Date format
-Indexes <- Indexes %>% mutate(date = as.yearmon(date))
-ZAR <- ZAR %>% mutate(date = as.yearmon(date))
-
-# Calculate exchange rate returns (currency returns)
-ZAR <- ZAR %>%
-  arrange(date) %>%
-  mutate(Return_cur = value / lag(value) - 1)
-
-# Merge Indexes with exchange rates
-Data_Unhedged <- Indexes %>%
-  left_join(ZAR, by = "date") %>%
-  arrange(date)
-
-# Convert ZAR-denominated indices to USD including currency effects
-Data_Unhedged <- Data_Unhedged %>%
-  mutate(
-    J433_USD = J433 / value,
-    ALBI_USD = ALBI / value
-  )
-
-# Calculate returns for all assets including currency effects
-Data_Unhedged <- Data_Unhedged %>%
-  mutate(
-    MSCI_ACWI_Return = MSCI_ACWI / lag(MSCI_ACWI) - 1,
-    Bbg_Agg_Return = Bbg_Agg / lag(Bbg_Agg) - 1,
-    J433_USD_Return = J433_USD / lag(J433_USD) - 1,
-    ALBI_USD_Return = ALBI_USD / lag(ALBI_USD) - 1
-  )
-
-# Remove NA values due to lag
-Data_Unhedged <- Data_Unhedged %>% na.omit()
-
-# Define portfolio weights
-# Equity: 60% total
-#   - 70% local equities (Capped SWIX): 0.42
-#   - 30% global equities (MSCI ACWI): 0.18
-# Bonds: 40% total
-#   - 70% local bonds (ALBI): 0.28
-#   - 30% global bonds (Global Bond Aggregate): 0.12
-
-# Calculate portfolio returns for the unhedged portfolio
-Data_Unhedged <- Data_Unhedged %>%
-  mutate(
-    Global_Return = 0.18 * MSCI_ACWI_Return + 0.12 * Bbg_Agg_Return,
-    Local_Return = 0.42 * J433_USD_Return + 0.28 * ALBI_USD_Return,
-    Portfolio_Return_Unhedged = Global_Return + Local_Return
-  )
-
-# Calculate rolling 12-month volatility for the unhedged portfolio
-Data_Unhedged <- Data_Unhedged %>%
-  arrange(date) %>%
-  mutate(
-    Rolling_Vol_Unhedged = rollapply(Portfolio_Return_Unhedged, width = 12, FUN = sd, fill = NA, align = "right") * sqrt(12)
-  )
-
-# Plotting the rolling volatility over time
-ggplot(Data_Unhedged, aes(x = date, y = Rolling_Vol_Unhedged)) +
-  geom_line(color = "red") +
-  labs(title = "12-Month Rolling Volatility of Unhedged Portfolio",
-       x = "Date",
-       y = "Rolling Volatility") +
-  theme_minimal()
-
+chart.CumReturns(merged)
+density_plot(merged)
+Return.annualized(merged)
+chart.RollingPerformance(merged, legend.loc = 3)
+lm(merged$Portfolio_Return_Hedged~cur_ret$Return_cur)
 ```
 
-```{r}
-filtered_hedged <- Indexes_Local_Returns %>% select(date, Portfolio_Return_Hedged)
-filtered_unhedged <- Data_Unhedged %>% select(date, Portfolio_Return_Unhedged) 
-chart.CumReturns(xts_hedged)
-xts_unhedged <- filtered_unhedged %>% tbl_xts()
-chart.CumReturns(xts_unhedged)
-```
+
+
+
+
+
+
+
+
+
+
+
 
 #  Methodology \label{Meth} {-}
 
