--- a/Questions/Question5/Question5.Rmd
+++ b/Questions/Question5/Question5.Rmd
@@ -108,11 +108,11 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, fig.width 
 # Lets load in example data, and see how this can be stored and later called from your 'data' folder.
 if(!require("tidyverse")) install.packages("tidyverse")
 library(tidyverse)
-Example_data <- Texevier::Ex_Dat
+
 
 # Notice that as you are working in a .Rproj file (I am assuming you are) - the relative paths of your directories start at your specified root.
 # This means that when working in a .Rproj file, you never need to use getwd() - it is assumed as your base root automatically.
-write_rds(Example_data, path = "data/Example_data.rds")
+
 
 ```
 
@@ -156,284 +156,66 @@ bbdxy <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question5/d
 
 ```
 
-To make your graphs look extra nice in latex world, you could use Tikz device. Replace dev - 'png' with 'tikz' in the chunk below. Notice this makes the build time longer and produces extra tex files - so if you are comfortable with this, set your device to Tikz and try it out:
-
-```{r Figure2, warning =  FALSE, fig.align = 'center', fig.cap = "Caption Here \\label{Figure2}", fig.height = 3, fig.width = 6, dev = 'png'}
-
-ZAR <- cncy %>% spread(Name, Price) %>% select(date, SouthAfrica_Cncy) %>% na.omit 
-Rest <- cncy %>% spread(Name, Price) 
-merged <- left_join(ZAR, Rest, by = "date") %>% select_if(~ !any(is.na(.))) %>% 
-    tbl_xts()
-    
-
-variance <- roll_var(xts_rtn, 252) 
-rolling_variance <- rollapply(xts_rtn, width = 252, FUN = var, fill = NA, align = "right") %>% 
-    na.omit() %>% 
-    data.frame(date = index(rolling_variance), RollingVariance = coredata(rolling_variance)) %>% 
-    gather(Name, Price, -date)
-
-# Plot
-ggplot(rolling_variance, aes(x = date, y = Price, colour = Name)) +
-  geom_line() 
-
-#gather(Name, Price, -date)
+```{r}
+xts_cncy <- cncy %>% spread(Name, Price) %>% tbl_xts()
+index(xts_cncy) <- as.Date(index(xts_cncy))
+xts_cncy <- xts_cncy[!weekdays(index(xts_cncy)) %in% c("Saturday", "Sunday"), ]
+xts_cncy <- xts_cncy[, !apply(is.na(xts_cncy), 2, any)]
 
 
 
-rtn <- merged %>% group_by(Name) %>% 
-    mutate(dlogret = log(Price) - log(lag(Price))) %>% mutate(scaledret = (dlogret - 
-    mean(dlogret, na.rm = T))) %>% filter(date > dplyr::first(date)) %>% 
-    ungroup() 
+currency_volatility(xts_cncy)
+```
 
-xts_rtn <- rtn %>% tbl_xts(., cols_to_xts = "dlogret", spread_by = "Name") 
-stddev <- StdDev.annualized(xts_rtn, 252)
-
-charts.TimeSeries(xts_rtn, legend.loc = 1)
-
-DCCPre <- dccPre(xts_rtn, include.mean = T, p = 0)
+```{r}
+xts_IV <- cncyIV %>% spread(Name, Price) %>% tbl_xts() %>% .["1999-03-01/"] 
+xts_IV <- xts_IV[, colSums(is.na(xts_IV)) == 0]
 
 
-Vol <- DCCPre$marVol
-colnames(Vol) <- colnames(xts_rtn)
-Vol <- 
-  data.frame( cbind( date = index(xts_rtn), Vol)) %>% # Add date column which dropped away...
-  mutate(date = as.Date(date)) %>%  tbl_df()  # make date column a date column...
-TidyVol <- Vol %>% gather(Stocks, Sigma, -date)
-ggplot(TidyVol) + geom_line(aes(x = date, y = Sigma, colour = Stocks))
+currency_volatility(xts_IV)
+
+
 ```
 
 
 ```{r}
-merged %>% PerformanceAnalytics::Return.calculate(.) %>%
-    xts::apply.yearly(., FUN = PerformanceAnalytics::CVaR) %>%
-    xts_tbl %>%
-    tidyr::gather(Name, Price, -date) 
-    # Now plot it:
-ggplot() + geom_line(aes(date, CVaR), color = "steelblue", size = 1.1,
-    alpha = 0.8) + fmxdat::theme_fmx() + facet_wrap(~Name) +
-    labs(x = "", title = "CVaR Plot example", subtitle = "Using tbl2xts package")
+ZAR <- xts_cncy %>% xts_tbl() %>% select(date, SouthAfrica_Cncy)
+ZAR_IV <- cncyIV %>% spread(Name, Price) %>% select(date, SouthAfrica_IV)
+
+data <- process_data(cncy_Carry, bbdxy, ZAR_IV, ZAR)
+
+model <- lm(ZAR_Rate_norm ~ Carry_Index_norm + Dollar_Index_norm + Volatility_norm, data = data)
+
+regression_summary(model)
+
 ```
 
 ```{r}
-VolatilitySkewness(merged)
-```
-
-To reference the plot above, add a ``\\label'' after the caption in the chunk heading, as done above. Then reference the plot as such: As can be seen, Figures \ref{Figure1}  and \ref{Figure2} are excellent, with Figure \ref{Figure2} being particularly aesthetically pleasing due to its device setting of Tikz. The nice thing now is that it correctly numbers all your figures (and sections or tables) and will update if it moves. The links are also dynamic.
-
-I very strongly suggest using ggplot2 (ideally in combination with dplyr) using the ggtheme package to change the themes of your figures.
-
-Also note the information that I have placed above the chunks in the code chunks for the figures. You can edit any of these easily - visit the Rmarkdown webpage for more information.
-
-# Splitting a page
-
-You can also very easily split a page using built-in Pandoc formatting. I comment this out in the code (as this has caused issues building the pdf for some users - which I presume to be a Pandoc issue), but you are welcome to try it out yourself by commenting out the following section in your Rmd file.
-
-
-<!-- :::::: {.columns data-latex="[T]"} -->
-<!-- ::: {.column data-latex="{0.7\textwidth}"} -->
-<!-- ```{r, echo=FALSE, fig.width=4, fig.height=4} -->
-<!-- par(mar = c(4, 4, .2, .1)) -->
-<!-- plot(cars, pch = 19) -->
-<!-- ``` -->
-<!-- ::: -->
-<!-- ::: {.column data-latex="{0.05\textwidth}"} -->
-<!-- \ -->
-<!-- ::: -->
-<!-- ::: {.column data-latex="{0.2\textwidth}"} -->
-<!-- \scriptsize -->
-
-<!-- ## Data {-} -->
-<!-- The figure on the left-hand side shows the `cars` data. -->
-
-<!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do -->
-<!-- eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut -->
-<!-- enim ad minim veniam, quis nostrud exercitation ullamco laboris -->
-<!-- nisi ut aliquip ex ea commodo consequat. -->
-<!-- ::: -->
-<!-- :::::: -->
-
-
-
-#  Methodology \label{Meth}
-
-## Subsection
-Ideally do not overuse subsections. It equates to bad writing.^[This is an example of a footnote by the way. Something that should also not be overused.]
-
-## Math section
-
-Equations should be written as such:
-
-\begin{align}
-\beta = \sum_{i = 1}^{\infty}\frac{\alpha^2}{\sigma_{t-1}^2} \label{eq1} \\
-\int_{x = 1}^{\infty}x_{i} = 1 \notag
-\end{align}
-
-If you would like to see the equations as you type in Rmarkdown, use $ symbols instead (see this for yourself by adjusted the equation):
-
-$$
-\beta = \sum_{i = 1}^{\infty}\frac{\alpha^2}{\sigma_{t-1}^2} \\
-\int_{x = 1}^{\infty}x_{i} = 1
-$$
-
-Note the equation above - this should appear in math in Rstudio. Writing nice math requires practice. Note I used a forward slashes to make a space in the equations. I can also align equations using  __\&__, and set to numbering only the first line. Now I will have to type ``begin equation'' which is a native \LaTeX command. Here follows a more complicated equation that you want aligned (using \& sign) and numbered:
-
-
-\begin{align}
-	y_t &= c + B(L) y_{t-1} + e_t   \label{eq2}    \\ \notag
-	e_t &= H_t^{1/2}  z_t ; \quad z_t \sim  N(0,I_N) \quad \& \quad H_t = D_tR_tD_t \\ \notag
-		D_t^2 &= {\sigma_{1,t}, \dots, \sigma_{N,t}}   \\ \notag
-		\sigma_{i,t}^2 &= \gamma_i+\kappa_{i,t}  v_{i, t-1}^2 +\eta_i  \sigma_{i, t-1}^2, \quad \forall i \\ \notag
-		R_{t, i, j} &= {diag(Q_{t, i, j}}^{-1}) . Q_{t, i, j} . diag(Q_{t, i, j}^{-1})  \\ \notag
-		Q_{t, i, j} &= (1-\alpha-\beta)  \bar{Q} + \alpha  z_t  z_t'  + \beta  Q_{t, i, j} \notag
-\end{align}
-
-Note that in \ref{eq2} I have aligned the equations by the equal signs. I also want only one tag, and I create spaces using ``quads''.
-
-See if you can figure out how to do complex math using the two examples provided in \ref{eq1} and \ref{eq2}.
-
-<!-- $$ -->
-<!-- This is a commented out section in the writing part. -->
-<!-- Comments are created by highlighting text, amnd pressing CTL+C -->
-<!-- \\begin{align} -->
-<!-- \\beta = \\alpha^2 -->
-<!-- \end{align} -->
-<!-- $$ -->
-
-
-# Including an external plot
-
-You can also include plots produced outside of your Rmarkdown file using the package *knitr*
-
-See below chunk:
-
-```{r, out.width = "205px", fig.cap=figures("Some Figure"), eval = F}
-
-knitr::include_graphics("YourFigureLocation/Logo.png")
-
+ggplot(data, aes(x = date)) +
+  geom_line(aes(y = ZAR_Rate_norm, color = "Normalized ZAR Rate")) +
+  geom_line(aes(y = Carry_Index_norm, color = "Normalized Carry Index")) +
+  geom_line(aes(y = Dollar_Index_norm, color = "Normalized Dollar Index")) +
+  geom_line(aes(y = Volatility_norm, color = "Normalized Volatility")) +
+  labs(title = "Normalized Variables Over Time",
+       x = "Date", y = "Normalized Value", color = "Legend") +
+  theme_minimal()
 ```
 
 
-# Results
 
-Tables can be included as follows. Use the _xtable_ (or kable) package for tables. Table placement = H implies Latex tries to place the table Here, and not on a new page (there are, however, very many ways to skin this cat. Luckily there are many forums online!).
-
-
-```{r ShortTable, results = 'asis'}
-
-library(xtable)
-data <- mtcars[1:5,] %>% tibble::as_tibble()
-
-table <- xtable(data, caption = "Short Table Example \\label{tab1}")
-  print.xtable(table,
-             # tabular.environment = "longtable",
-             floating = TRUE,
-             table.placement = 'H',
-             # scalebox = 0.3,
-             comment = FALSE,
-             caption.placement = 'bottom'
-             )
-
+```{r}
+plots(data)
 ```
 
-To reference calculations __in text__, _do this:_ From table \ref{tab1} we see the average value of mpg is `r mean(mtcars[1:5,]$mpg)`.
 
-Including tables that span across pages, use the following (note that I add below the table: ``continue on the next page''). This is a neat way of splitting your table across a page.
+```{r}
 
-Use the following default settings to build your own possibly long tables. Note that the following will fit on one page if it can, but cleanly spreads over multiple pages:
-
-```{r LongTable, results = 'asis'}
-
-library(xtable)
-
-data = mtcars %>% tibble::as_tibble()
-  addtorow          <- list()
-  addtorow$pos      <- list()
-  addtorow$pos[[1]] <- c(0)
-  addtorow$command  <- c(paste("\\hline \n",
-                               "\\endhead \n",
-                               "\\hline \n",
-                               "{\\footnotesize Continued on next page} \n",
-                               "\\endfoot \n",
-                               "\\endlastfoot \n",sep=""))
-table <- xtable(data, caption = "Long Table Example")
-  print.xtable(table,
-             tabular.environment = "longtable",
-             floating = FALSE, # Leave this as is.
-             table.placement = 'H', # Leave this as is.
-             booktabs = T, # Aesthetics
-             include.rownames = FALSE,  # Typically you don't want this in a table.
-             add.to.row = addtorow, # For adding the Continued on next page part...
-             comment = FALSE,
-             caption.placement = 'top',  # Where do you want the caption?
-             size="\\fontsize{12pt}{13pt}\\selectfont"  # Size of text in table..
-             )
-# See https://cran.r-project.org/web/packages/xtable/vignettes/xtableGallery.pdf for table inspiration
+plot_rolling_correlations(data, 252)
 ```
 
-\hfill
-
-<!-- hfill can be used to create a space, like here between text and table. -->
 
 
-## Huxtable
 
-Huxtable is a very nice package for making working with tables between Rmarkdown and Tex easier.
-
-This cost some adjustment to the Tex templates to make it work, but it now works nicely.
-
-See documentation for this package [here](https://hughjonesd.github.io/huxtable/huxtable.html). A particularly nice addition of this package is for making the printing of regression results a joy (see [here](https://hughjonesd.github.io/huxtable/huxtable.html#creating-a-regression-table)). Here follows an example:
-
-
-If you are eager to use huxtable, comment out the Huxtable table in the Rmd template, and uncomment the colortbl package in your Rmd's root.
-
-Note that I do not include this in the ordinary template, as some latex users have complained it breaks when they build their Rmds (especially those using tidytex - I don't have this problem as I have the full Miktex installed on mine). Up to you, but I strongly recommend installing the package manually and using huxtable. To make this work, uncomment the _Adding additional latex packages_ part in yaml at the top of the Rmd file. Then comment out the huxtable example in the template below this line. Reknit, and enjoy.
-
-```{r, results = 'asis'}
-
-if(!require(huxtable)) install.packages(huxtable)
-library(huxtable)
-data(diamonds, package = 'ggplot2')
-Title <- "Regression Output"
-Label <- "Reg01"
-lm1 <- lm(price ~ carat, diamonds)
-lm2 <- lm(price ~ depth, diamonds)
-lm3 <- lm(price ~ carat + depth, diamonds)
-htab <-
-huxreg(lm1, lm2, lm3,
-                statistics = c(N = "nobs", R2 = "r.squared"),
-                note = "%stars%.") %>%
-  set_caption(Title) %>%
-  set_label(Label)
-# More settings:
-font_size(htab) <- 12
-# Let's change regression names: this is slightly hacky, but works. Comment out this section to see what the default looks like:
-  Names <- c( "Reg1", "Reg2", "Reg3")
-  for(i in 1:length(Names)) {
-    htab[1,][[1+i]] <- Names[i]
-  }
-# Now simply call the table:
-htab
-
-```
-
-FYI - R also recently introduced the gt package, which is worthwhile exploring too.
-
-# Lists
-
-To add lists, simply using the following notation
-
-* This is really simple
-
-    + Just note the spaces here - writing in R you have to sometimes be pedantic about spaces...
-
-* Note that Rmarkdown notation removes the pain of defining \LaTeX environments!
-
-# Conclusion
-
-I hope you find this template useful. Remember, stackoverflow is your friend - use it to find answers to questions. Feel free to write me a mail if you have any questions regarding the use of this package. To cite this package, simply type citation("Texevier") in Rstudio to get the citation for @Texevier (Note that uncited references in your bibtex file will not be included in References).
-
-<!-- Make title of bibliography here: -->
-<!-- \newpage -->
 
 \newpage
 
